# closed-code

./: .gitignore  Cargo.toml  README.md
docs/: phase_1.md  phase_10.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md  phase_8a.md  phase_8b.md  phase_9.md  phase_9a.md  phase_9b.md  phase_9c.md  phase_9d.md  phase_9e.md  phase_spec.md  ratatui_best_practices.md  rust_best_practices.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  repl.rs
src/agent/: cache.rs  commit_agent.rs  explorer.rs  message.rs  mod.rs  orchestrator.rs  planner.rs  review_agent.rs  tag_processor.rs  web_searcher.rs
src/gemini/: client.rs  mod.rs  stream.rs  types.rs
src/git/: commit.rs  context.rs  diff.rs  mod.rs
src/mode/: mod.rs
src/sandbox/: fallback.rs  linux.rs  macos.rs  mod.rs
src/session/: mod.rs  store.rs  transcript.rs
src/tool/: file_edit.rs  file_write.rs  filesystem.rs  mod.rs  plan.rs  registry.rs  report.rs  shell.rs  spawn.rs
src/tui/: app.rs  approval_overlay.rs  chat.rs  command_picker.rs  commands.rs  commit_confirm.rs  diff_view.rs  events.rs  file_completion.rs  file_indexer.rs  file_picker.rs  gauge.rs  header.rs  input.rs  keybindings.rs  layout.rs  markdown.rs  message.rs  mod.rs  mode_picker.rs  session_picker.rs  status_bar.rs  theme.rs  tui_approval_handler.rs
src/ui/: approval.rs  diff.rs  mod.rs  spinner.rs  theme.rs  usage.rs
