[package]
name = "closed-code"
version = "0.1.0"
edition = "2021"
description = "AI-powered coding CLI powered by Gemini"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# CLI argument parsing
clap = { version = "4", features = ["derive", "env"] }

# HTTP + SSE streaming
reqwest = { version = "0.12", features = ["json", "stream"] }
reqwest-eventsource = "0.6"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal I/O and UI
crossterm = { version = "0.28", features = ["event-stream"] }
ratatui = { version = "0.29", features = ["crossterm"] }
tui-textarea = "0.7"
indicatif = "0.17"
rustyline = { version = "15", features = ["derive"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Retry with backoff
backon = "1"

# Async traits
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment
dotenvy = "0.15"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"

# File search (glob patterns)
glob = "0.3"

# Regex content search
regex = "1"

# Gitignore-aware directory walking
ignore = "0.4"

# Safe shell command string splitting
shlex = "1"

# Lenient JSON parsing (handles trailing commas from Gemini SSE)
json5 = "1"

# Diff generation (Myers algorithm)
similar = "2"

# Markdown parsing (for TUI message rendering)
pulldown-cmark = { version = "0.13", default-features = false }

# Interactive terminal prompts (approval y/N)
dialoguer = "0.11"

# TOML configuration file parsing
toml = "0.8"
nucleo = "0.5"
base64 = "0.22"

# Platform-specific sandboxing (Linux only)
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"

[dev-dependencies]
tempfile = "3"
